--- a/skeleton.bib
+++ b/skeleton.bib
@@ -9,14 +9,9 @@
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-<<<<<<< HEAD
-  year = {2022},
-  note = {R package version 2.15},
-=======
-  year = {2021},
-  note = {R package version 2.10},
->>>>>>> b702cd0195f3d723e21a95c11e760e95ca313294
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2023},
+  note = {R package version 2.23},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -26,7 +21,7 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -36,7 +31,7 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
