--- a/bookdown-demo-master/index.Rmd
+++ b/bookdown-demo-master/index.Rmd
@@ -3,7 +3,14 @@ title: "A Minimal Book Example"
 author: "Yihui Xie"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
+output: 
+  bookdown::html_document2: default
+  bookdown::pdf_document2:
+    keep_tex: true
+  bookdown::word_document2:
+    toc: true
+  bookdown::tufte_book2():
+#output: bookdown::gitbook
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
@@ -12,6 +19,17 @@ github-repo: rstudio/bookdown-demo
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
 ---
 
+note: 
+
+output:
+  bookdown::pdf_document2:
+    template: "path-to-my-template"
+  bookdown::word_document2:
+    default
+knit: (function(inputFile, encoding){
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "my-output-path", output_format = "all") })
+  
 # Prerequisites
 
 This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
